Updated the README instructions Fixed the mann_whittney test Found 100 predictive genes stored

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Implementation of Breast Cancer Prediction Using 
 Artificial Neural Networks
+
+To run parser.py, you must be logged into the Swarthmore CS 
+Server computer named flour
